--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
   <div class="section-box" style="display:grid;grid-template-columns:repeat(auto-fit,minmax(220px,1fr));gap:18px;align-items:start">
     <div>
       <h3 style="margin-top:0">About Us</h3>
-      <p>Hamdan International Academy provides world-class education focused on academic excellence and character development.</p>
+      <p>A private institution with a public purpose, Hamadan International Academy combines both talent nurturing from the grassroots and rigorous tertiary education preparation with a commitment Our Vision is to be a world class educational service provider, through relentless effort to attain the greatest height of excellence in education and high standard of discipline pursuit of knowledge. To instill sound knowledge, skills and values into learners within a serene and conducive environment, this enable learners to become self-inspired, self-discipline and life-long learners. Our Secondary School classrooms are for ages. This age group is working on developing their fine and gross motor skills, that are gaining independence.</p>
       <p><a href="contact.html" style="color:var(--accent);font-weight:700">Learn more →</a></p>
     </div>
     <div>
