--- a/index.html
+++ b/index.html
@@ -105,14 +105,14 @@
         <h1>Refining Your Digital Experience</h1>
         
         <p>
-            Hamdan International Academy is currently updating our portal and website to better serve our students and parents. We are installing new features for the 2025 academic session.
+            Hamdan International Academy is currently updating our portal and website to better serve our students and parents. We are installing new features for the 2025/2026 academic session.
         </p>
 
         <div class="contact-info">
             <p>For urgent admissions or inquiries, please contact us:</p>
             <p>
                 📞 <strong>+234 903 000 9600</strong><br>
-                📧 <a href="mailto:info@hamdanacademy.edu.ng">info@hamdanacademy.edu.ng</a>
+                📧 <a href="mailto:info@hamdanacademy.com">info@hamdanacademy.edu.ng</a>
             </p>
         </div>
     </div>
