--- a/admission_form.html
+++ b/admission_form.html
@@ -1,75 +1,141 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Admission Form | Hamdan International Academy</title>
-  <link rel="stylesheet" href="style.css">
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width,initial-scale=1" />
+<title>Apply — Hamdan International Academy</title>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
+
+<style>
+body{
+  font-family:'Poppins',sans-serif;
+  background:#e6f0ff;
+  margin:0;
+  color:#002147;
+}
+.container{
+  max-width:780px;
+  margin:40px auto;
+  padding:30px;
+  background:#fff;
+  border-radius:14px;
+  box-shadow:0 8px 24px rgba(0,0,0,0.08);
+}
+h2{
+  margin-top:0;
+  color:#002147;
+  font-weight:700;
+}
+input,textarea,select{
+  width:100%;
+  padding:12px;
+  border-radius:8px;
+  border:1px solid #dcdcdc;
+  margin-top:10px;
+  font-size:15px;
+  background:#fdfdfd;
+}
+.button{
+  background:#003366;
+  color:#fff;
+  padding:12px 20px;
+  border-radius:10px;
+  border:none;
+  font-weight:700;
+  cursor:pointer;
+}
+.price-tag{
+  background:#00336610;
+  padding:10px;
+  border-radius:8px;
+  font-weight:600;
+  border-left:4px solid #003366;
+  margin-top:10px;
+}
+.small{
+  font-size:13px;
+  color:#555;
+  margin-top:8px;
+}
+.terms-box{
+  margin-top:15px;
+  padding:12px;
+  background:#f8f8f8;
+  border-radius:8px;
+  font-size:13px;
+  border:1px solid #e1e1e1;
+}
+</style>
 </head>
+
 <body>
+<div class="container">
+  <h2>Admission Application Form</h2>
 
-<header>
-  <div class="container nav-wrapper">
-    <img src="hamdan_logo_png.png" alt="Logo" class="logo">
-    <ul class="nav-links">
-      <li><a href="index.html">Home</a></li>
-      <li><a href="admission_form.html">Admissions</a></li>
-      <li><a href="portal.html" class="btn-portal">Portal</a></li>
-    </ul>
+  <div class="price-tag">
+    <strong>Application Fee:</strong> ₦30,000 (for Nursery School, Primary School & College)
   </div>
-</header>
 
-<main class="container">
-  <div class="content-card">
-    <h2 class="section-title" style="text-align: center;">Online Admission Application</h2>
-    <p style="text-align: center; margin-bottom: 30px;">Please complete the form below to begin the enrollment process for 2025/2026.</p>
+  <form id="admissionForm" 
+        action="https://formspree.io/f/YOUR_FORMSPREE_ENDPOINT" 
+        method="POST" 
+        enctype="multipart/form-data">
 
-    <form action="#">
-      <div class="form-grid">
-        <div class="form-group">
-          <label>Surname *</label>
-          <input type="text" placeholder="Student Surname" required>
-        </div>
-        <div class="form-group">
-          <label>First Name *</label>
-          <input type="text" placeholder="Student First Name" required>
-        </div>
-        <div class="form-group">
-          <label>Gender *</label>
-          <select required>
-            <option value="">Select Gender</option>
-            <option>Male</option>
-            <option>Female</option>
-          </select>
-        </div>
-        <div class="form-group">
-          <label>Date of Birth *</label>
-          <input type="date" required>
-        </div>
-        <div class="form-group">
-          <label>Entry Level *</label>
-          <select required>
-            <option value="">Select Class</option>
-            <option>Creche / Pre-School</option>
-            <option>Primary Section</option>
-            <option>Secondary School</option>
-          </select>
-        </div>
-        <div class="form-group">
-          <label>Parent/Guardian Phone *</label>
-          <input type="tel" value="+234 903 000 9600" required>
-        </div>
-      </div>
+    <label>Full Name
+      <input name="fullname" required>
+    </label>
 
-      <div class="form-group" style="margin-top: 15px;">
-        <label>Home Address *</label>
-        <textarea rows="3" placeholder="Enter full residential address" required></textarea>
-      </div>
+    <label>Email Address
+      <input type="email" name="email" required>
+    </label>
 
-      <button type="submit" class="submit-btn">Submit Application</button>
-    </form>
-  </div>
-</main>
+    <label>Phone Number
+      <input type="tel" name="phone" required>
+    </label>
 
+    <label>Class Applying For
+      <select name="class" required>
+        <option value="">Select a class</option>
+        <option>Nursery School</option>
+        <option>Primary School</option>
+        <option>College</option>
+      </select>
+    </label>
+
+    <label>Upload Entry Documents (Birth cert, results, passport photo)
+      <input type="file" name="documents" accept=".pdf,.jpg,.jpeg,.png" required>
+    </label>
+
+    <label>Why do you want to join HIA?
+      <textarea name="message" rows="4"></textarea>
+    </label>
+
+    <div class="terms-box">
+      <label>
+        <input type="checkbox" name="terms" required>  
+        I agree to the <strong>Terms & Conditions</strong>:
+      </label>
+      <ul style="margin:10px 0 0 20px; padding:0; line-height:1.4;">
+        <li>Application fee is <strong>non-refundable</strong> under all circumstances.</li>
+        <li>Submitting this form does not guarantee admission.</li>
+        <li>All documents provided must be valid and verifiable.</li>
+        <li>False information may result in disqualification.</li>
+        <li>Your data will be used only for admission processing.</li>
+      </ul>
+    </div>
+
+    <div style="display:flex;gap:12px;align-items:center;margin-top:20px">
+      <button class="button" type="submit">Submit Application</button>
+
+      <a href="checkout.html" 
+         style="background:#ffb400;color:#002147;padding:12px 16px;
+         border-radius:10px;text-decoration:none;font-weight:700">
+         Proceed to Checkout
+      </a>
+    </div>
+
+    <p class="small">After submitting, you will receive a confirmation email (via Formspree). Replace the endpoint to adjust behavior.</p>
+  </form>
+</div>
 </body>
 </html>
